# teamhub

./: .dockerignore  .gitignore  README.md  TASKS.md  docker-compose.yml  docker.env.example  package-lock.json  package.json  pnpm-lock.yaml
apps/ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  start.js
apps/ai/alembic/: env.py
apps/ai/alembic/versions/: 138aa622bdbc_initial_ai_schema.py  7e1aaa26ef7f_add_graph_checkpoints.py  dcc825b96682_add_checkpoint_format.py
apps/ai/app/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/ai/app/chains/: __init__.py  extraction.py  qa.py  summarize.py  tagging.py
apps/ai/app/embeddings/: __init__.py  chunker.py  parsers.py  pipeline.py  retriever.py
apps/ai/app/models/: __init__.py  ai_cache.py  ai_job.py  embedding.py  graph_checkpoint.py
apps/ai/app/prompts/: __init__.py  auto_assign_v1.txt  extract_actions_v1.txt  loader.py  qa_v1.txt  rebalance_assign_v1.txt  summarize_v1.txt  tagging_v1.txt  title_v1.txt
apps/ai/app/routers/: __init__.py  documents.py  search.py  stream.py  workflows.py
apps/ai/app/utils/: __init__.py  attachments.py  auth.py  streaming.py
apps/ai/tests/: __init__.py  check_similarity.py  check_workspace.py  conftest.py  test_auto_assignment_workflow.py  test_database.py  test_document_tasks_workflow.py  test_extraction.py  test_parser.py  test_pipeline.py  test_qa.py  test_semantic_search.py  test_summarize.py  test_tagging.py  trigger_job_test.py  trigger_real_document.py  trigger_real_document_tasks.py  verify_neon.py
(+272 files in other folders)
